# ML_recap

./: README.md
0-Hello-World/: Dockerfile  README.md  hello_world.py  pyproject.toml
0-Hello-World/src/: hello_world.py  main.py
Part 2 - Regression/Section 4 - Simple Linear Regression/R/: .Rhistory
